--- a/haskcell-lib.cabal
+++ b/haskcell-lib.cabal
@@ -1,24 +1,54 @@
-name:                haskcell-lib
-version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/ignaciobll/haskcell-lib#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Ignacio Ballesteros
-maintainer:          ignacioballesterosgonzalez@gmail.com
-copyright:           Ignacio Ballesteros
-category:            haskcell
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+cabal-version: 1.12
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
+-- This file has been generated from package.yaml by hpack version 0.31.0.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: ff7f15e2793d6727725069f5d31266edb6b3324add33852b930b90f2c15494f8
+
+name:           haskcell-lib
+version:        0.1.0.0
+description:    Please see the README on GitHub at <https://github.com/ignaciobll/haskcell-lib#readme>
+homepage:       https://github.com/ignaciobll/haskcell-lib#readme
+bug-reports:    https://github.com/ignaciobll/haskcell-lib/issues
+author:         Ignacio Ballesteros
+maintainer:     ignacioballesterosgonzalez@gmail.com
+copyright:      2018 Ignacio Ballesteros
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
+  type: git
   location: https://github.com/ignaciobll/haskcell-lib
+
+library
+  exposed-modules:
+      Experimental
+      Lib
+  other-modules:
+      Paths_haskcell_lib
+  hs-source-dirs:
+      src
+  build-depends:
+      base >=4.7 && <5
+    , containers
+    , time
+  default-language: Haskell2010
+
+test-suite expenses-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_haskcell_lib
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , containers
+    , expenses
+    , time
+  default-language: Haskell2010
