--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,9 @@ packages:
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 
+extra-deps:
+- containers-0.6.0.1
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
